@@ -135,6 +135,15 @@ New in spot 2.7.5.dev (not yet released)
     properties.  This can be altered with the SPOT_PR_CHECK
     environment variable.
 
+  Backward incompatibilities:
+
+  - The virtual function twa::intersecting_run() no longuer takes a
+    second "from_other" Boolean argument.  This is a backward
+    incompatibility only for code that overrides this function in a
+    subclass.  For backward compatibility with programs that simply
+    call this function with two argument, a non-virtual version of the
+    function has been introduced and marked as deprecated.
+
   Bugs fixed:
 
   - The gf_guarantee_to_ba() is relying on an inplace algorithm that
